--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/noto-sans": "^0.2.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-safe-area-context": "^4.3.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
