--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
@@ -21,6 +23,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7"
   },
