--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-fit-image": "^1.5.5",
+    "react-native-image-crop-picker": "^0.38.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "expo-image-picker": "~13.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
