--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@reduxjs/toolkit": "^1.8.3",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
+    "expo-image-picker": "~13.1.1",
     "expo-linear-gradient": "~11.3.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -31,7 +33,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
-    "expo-image-picker": "~13.1.1"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
