--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native": "0.68.2",
     "react-native-fit-image": "^1.5.5",
     "react-native-image-crop-picker": "^0.38.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "^12.3.0",
